# L5P-Keyboard-RGB

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  deny.toml  flake.nix  rustfmt.toml  vcpkg.json  xmas.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  unsupported_keyboard.yml
.github/workflows/: compile-rust.yml  release-rust.yml
app/: Cargo.toml  build.rs
app/libs/hbb_common/src/: config.rs  fs.rs  lib.rs  password_security.rs  socket_client.rs  tcp.rs  udp.rs
app/libs/hbb_common/src/platform/: linux.rs
app/libs/scrap/: build.rs
app/libs/scrap/examples/: capture_mag.rs  ffplay.rs  list.rs  record-screen.rs  screenshot.rs
app/libs/scrap/src/android/: ffi.rs
app/libs/scrap/src/common/: android.rs  codec.rs  convert.rs  dxgi.rs  hwcodec.rs  mediacodec.rs  quartz.rs  record.rs  vpxcodec.rs
app/libs/scrap/src/dxgi/: gdi.rs  mag.rs  mod.rs
app/libs/scrap/src/quartz/: capturer.rs  config.rs  ffi.rs  frame.rs
app/libs/scrap/src/wayland/: pipewire.rs  pipewire_dbus.rs
app/libs/scrap/src/x11/: capturer.rs  display.rs  ffi.rs  iter.rs  server.rs
app/res/: resources.rc  tray-icon.xml
app/src/: cli.rs  console.rs  enums.rs  error.rs  input.rs  main.rs  persist.rs  profile.rs  storage_trait.rs  tray.rs  util.rs
app/src/effects/: ambient.rs  christmas.rs  custom_effect.rs  disco.rs  fade.rs  lightning.rs  mod.rs  ripple.rs  swipe.rs  temperature.rs  zones.rs
app/src/gui/: effect_options.rs  menu_bar.rs  mod.rs  modals.rs  profile_list.rs  saved_items.rs  style.rs
app/src/manager/: custom_effect.rs  mod.rs  profile.rs
app/src/manager/effects/: ambient.rs  christmas.rs  default_ui.rs  disco.rs  fade.rs  lightning.rs  mod.rs  ripple.rs  swipe.rs  temperature.rs  zones.rs
driver/: Cargo.toml
driver/src/: error.rs  lib.rs
libs/scrap/: build.rs
libs/scrap/src/common/: codec.rs
src/: cli.rs  custom_effect.rs  enums.rs  error.rs  gui.rs  keyboard_manager.rs  keyboard_utils.rs  main.rs  profile.rs
src/effects/: ambient.rs  ambient_warmer_desaturated.rs  christmas.rs  disco.rs  fade.rs  lightning.rs  mod.rs  ripple.rs  smooth_wave.rs  swipe.rs  temperature.rs
src/gui/: app.rs  builder.rs  color_tiles.rs  custom_effect_manager.rs  dialog.rs  effect_browser.rs  effect_browser_tile.rs  enums.rs  gui_builder.rs  keyboard_color_tiles.rs  keyboard_effect_manager.rs  keyboard_manager.rs  menu_bar.rs  mod.rs  options.rs  options_tile.rs  profile_list.rs  profile_manager.rs  side_tile.rs  style.rs  utils.rs
src/utils/: audiodevices.rs  mod.rs
