[package]
name = "legion-kb-rgb"
version = "0.18.0"
authors = ["4JX"]
edition = "2018"
homepage = "https://github.com/4JX/L5P-Keyboard-RGB"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# https://github.com/rustdesk/rustdesk/tree/master/libs/scrap
scrap = { path = "libs/scrap" }
fast_image_resize = "2.0.0"
tray-item = { version = "0.5.0-alpha", git = "https://github.com/njust/tray-item-rs" }
clap = { version = "4.0.15", features = ["color", "cargo", "derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
color-eyre = "0.6.2"
device_query = "1.1.1"
sysinfo = "0.26.4"
crossbeam-channel = "0.5.6"
thiserror = "1.0.37"
single-instance = "0.3.3"
image = "0.24.4"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
open = "3.0.3"

# Dependabot alerts
regex = "1.6.0"
crossbeam-utils = "0.8.12"

[dependencies.hidapi]
version = "1.4.2"
default-features = false
features = ["linux-static-libusb"]

[build-dependencies]
winres = "0.1.12"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "8e1f46d"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { dependencies = ["libvpx", "libyuv"] }
x86_64-pc-windows-msvc = { dependencies = [
    "libvpx:x64-windows-static",
    "libyuv:x64-windows-static",
] }
