[package]
name = "legion-kb-rgb"
version = "0.19.6"
authors = ["4JX"]
edition = "2021"
homepage = "https://github.com/4JX/L5P-Keyboard-RGB"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main driver
legion-rgb-driver = { path = "../driver" }

# Cli
clap = { version = "4.5.17", features = ["color", "cargo", "derive"] }

# Ui
eframe = "0.28.1"
# tokio = { version = "1.41.1" }
egui-modal = "0.4.0"
# egui-modal = { git = "https://github.com/n00kii/egui-modal", rev = "8443238" }
egui_file = "0.18.0"
egui-notify = "0.15.0"
# egui-notify = { git = "https://github.com/ItsEthra/egui-notify", rev = "bc5eb67" }

# App window, taskbar and tray icon loading
image = "0.25.2"

# AmbientLight effect
scrap = { git = "https://github.com/rustdesk/rustdesk", rev = "40af9dc", features = [
    "wayland",
    # "linux-pkg-config",
] }
fast_image_resize = "4.2.1"
# default-features = false just removes the use_wasm feature that removes a lot of unecessary slack
# since this app wont ever use the web
# photon-rs = { version = "0.3.2", default-features = false }
photon-rs = { git = "https://github.com/silvia-odwyer/photon", rev = "d084f68", default-features = false }


# Keyboard and mouse grabbing
device_query = "2.1.0"

rand = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
color-eyre = "0.6.3"
sysinfo = "0.31.4"
crossbeam-channel = "0.5.13"
thiserror = "1.0.63"
single-instance = "0.3.3"
open = "5.3.0"
error-stack = "0.5.0"
winapi = { version = "0.3.9", features = ["consoleapi", "wincon"] }

# Tray icon
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = { version = "0.19.1", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = "0.19.1"
gtk = "0.18.1"

# Fix versions to stop cargo from yelling about dependency resolution

# Dependabot alerts

# HACK: Add a dummy feature to the program because rust-analyzer doesn't want
# to enable linux-pkg-config itself for whatever reason
[features]
scrap-pkg-config = ["scrap/linux-pkg-config"]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "335a153"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { dependencies = ["libvpx", "libyuv", "aom"] }
x86_64-pc-windows-msvc = { dependencies = [
    "libvpx:x64-windows-static",
    "libyuv:x64-windows-static",
    "aom:x64-windows-static",
] }
