[package]
name = "legion-kb-rgb"
version = "0.20.2"
authors = ["4JX"]
edition = "2021"
homepage = "https://github.com/4JX/L5P-Keyboard-RGB"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main driver
legion-rgb-driver = { path = "../driver" }

# Cli
clap = { version = "4.5.30", features = ["color", "cargo", "derive"] }

# Ui
eframe = { version = "0.31.0", features = ["x11", "wayland"] }
# egui-modal = "0.6.0"
egui-modal = { git = "https://github.com/n00kii/egui-modal", rev = "74add2407bb945992bd15c79fcedc2af2ee0fb4a" }
egui_file = "0.22.0"
egui-notify = "0.19.0"
# egui-notify = { git = "https://github.com/ItsEthra/egui-notify", rev = "bc5eb67" }

# App window, taskbar and tray icon loading
image = "0.25.5"

# AmbientLight effect
scrap = { git = "https://github.com/rustdesk/rustdesk", rev = "40af9dc", features = [
    "wayland",
    # "linux-pkg-config",
] }
fast_image_resize = "5.1.2"
# default-features = false just removes the use_wasm feature that removes a lot of unecessary slack
# since this app wont ever use the web
# photon-rs = { version = "0.3.2", default-features = false }
photon-rs = { git = "https://github.com/silvia-odwyer/photon", rev = "d084f68", default-features = false }


# Keyboard and mouse grabbing
device_query = "3.0.0"

rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
color-eyre = "0.6.3"
sysinfo = "0.33.1"
crossbeam-channel = "0.5.14"
thiserror = "2.0.11"
single-instance = "0.3.3"
open = "5.3.2"
error-stack = "0.5.0"
winapi = { version = "0.3.9", features = ["consoleapi", "wincon"] }

# Tray icon
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = { version = "0.20.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = "0.20.0"
gtk = "0.18.2"

# Fix versions to stop cargo from yelling about dependency resolution

# Dependabot alerts

# HACK: Add a dummy feature to the program because rust-analyzer doesn't want
# to enable linux-pkg-config itself for whatever reason
[features]
scrap-pkg-config = ["scrap/linux-pkg-config"]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "335a153"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { dependencies = ["libvpx", "libyuv", "aom"] }
x86_64-pc-windows-msvc = { dependencies = [
    "libvpx:x64-windows-static",
    "libyuv:x64-windows-static",
    "aom:x64-windows-static",
] }
